Upload update and dowload file