@@ -1,6 +1,9 @@
 package com.project.DASBackend.service.impl;
 
+import com.amazonaws.AmazonServiceException;
+import com.amazonaws.SdkClientException;
 import com.amazonaws.services.s3.AmazonS3;
+import com.amazonaws.services.s3.model.ObjectMetadata;
 import com.amazonaws.services.s3.model.PutObjectRequest;
 import com.amazonaws.services.s3.model.S3Object;
 import com.amazonaws.services.s3.model.S3ObjectInputStream;
@@ -8,6 +11,8 @@ import com.amazonaws.util.IOUtils;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -20,33 +25,45 @@ import java.util.Objects;
 @Slf4j
 public class StorageService {
 
-    @Value("${application.bucket.name}")
+//    @Value("${application.bucket.name}")
+//    private String bucketName;
+
+    @Value("${aws.s3.bucket.name}")
     private String bucketName;
 
     @Autowired
     private AmazonS3 s3Client;
 
-    public String uploadFile(MultipartFile file) {
-        File fileObj = convertMultiPartFileToFile(file);
-        String fileName = System.currentTimeMillis() + "_" + file.getOriginalFilename();
-        s3Client.putObject(new PutObjectRequest(bucketName, fileName, fileObj));
-        fileObj.delete();
-        return "File uploaded : " + fileName;
+    public String uploadFile(MultipartFile file) throws AmazonServiceException, SdkClientException, IOException {
+//        File fileObj = convertMultiPartFileToFile(file);
+//        String fileName = System.currentTimeMillis() + "_" + file.getOriginalFilename();
+//        s3Client.putObject(new PutObjectRequest(bucketName, fileName, fileObj));
+//        fileObj.delete();
+//        return "File uploaded : " + fileName;
+
+        ObjectMetadata metaDak = new ObjectMetadata();
+        s3Client.putObject(bucketName, file.getName(), file.getInputStream(), metaDak);
+        return "File uploaded Successfully: ";
     }
 
 
-    public byte[] downloadFile(String fileName) {
+    //    public byte[] downloadFile(String fileName) {
+//        S3Object s3Object = s3Client.getObject(bucketName, fileName);
+//        S3ObjectInputStream inputStream = s3Object.getObjectContent();
+//        try {
+//            byte[] content = IOUtils.toByteArray(inputStream);
+//            return content;
+//        } catch (IOException e) {
+//            e.printStackTrace();
+//        }
+//        return null;
+//    }
+    public Resource dowloadFile(String fileName) throws IOException {
         S3Object s3Object = s3Client.getObject(bucketName, fileName);
-        S3ObjectInputStream inputStream = s3Object.getObjectContent();
-        try {
-            byte[] content = IOUtils.toByteArray(inputStream);
-            return content;
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return null;
+        var bytes = s3Object.getObjectContent().readAllBytes();
+        Resource resource = new ByteArrayResource(bytes);
+        return resource;
     }
-
 
     public String deleteFile(String fileName) {
         s3Client.deleteObject(bucketName, fileName);
